--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,3 @@
-[submodule "maupassant"]
-	path = ./themes/maupassant
-	url = https://github.com/pagecho/maupassant
-	branch = release
+[submodule "themes/maupassant"] 
+  path = themes/maupassant 
+  url = https://github.com/flysnow-org/maupassant-hugo.git
