--- a/config.toml
+++ b/config.toml
@@ -51,14 +51,23 @@ summaryLength = 140
 
 [menu]
 
+
   [[menu.main]]
     identifier = "archives"
     name = "归档"
     url = "/archives/"
-    weight = 3
+    weight = 2
+
+#  [[menu.main]]
+#    identifier = "规划"
+#    name = "规划"
+#    url = "/career/"
+#    weight = 3
 
   [[menu.main]]
     identifier = "about"
     name = "关于"
     url = "/about/"
-    weight = 4
+    weight = 3
+
+
