--- a/config.toml
+++ b/config.toml
@@ -57,16 +57,16 @@ summaryLength = 140
     url = "/archives/"
     weight = 2
 
-#  [[menu.main]]
-#    identifier = "规划"
-#    name = "规划"
-#    url = "/career/"
-#    weight = 3
+  [[menu.main]]
+    identifier = "规划"
+    name = "规划"
+    url = "/career/"
+    weight = 3
 
   [[menu.main]]
     identifier = "about"
     name = "关于"
     url = "/about/"
-    weight = 3
+    weight = 4
 
 
